SERVER-6951 SERVER-9656 SERVER-9849 Handle third_party libraries consistently